--- a/public/css/app.css
+++ b/public/css/app.css
@@ -814,6 +814,21 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-\[1\.5\] {
+  width: 1.5;
+}
+.w-\[1\.5rem\] {
+  width: 1.5rem;
+}
+.w-4 {
+  width: 1rem;
+}
+.w-\[12rem\] {
+  width: 12rem;
+}
+.w-\[3\.75rem\] {
+  width: 3.75rem;
+}
 .max-w-xl {
   max-width: 36rem;
 }
@@ -1088,6 +1103,10 @@ select {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .pt-8 {
   padding-top: 2rem;
 }
@@ -1236,6 +1255,10 @@ select {
 .text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+.text-slate-700 {
+  --tw-text-opacity: 1;
+  color: rgb(51 65 85 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1633,6 +1656,11 @@ html tr.no-associated-driver {
   .md\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .md\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
 
   .md\:text-5xl {
