--- a/public/css/app.css
+++ b/public/css/app.css
@@ -817,6 +817,21 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-\[4rem\] {
+  width: 4rem;
+}
+.w-\[4\.5rem\] {
+  width: 4.5rem;
+}
+.w-\[5rem\] {
+  width: 5rem;
+}
+.w-12 {
+  width: 3rem;
+}
+.w-\[6rem\] {
+  width: 6rem;
+}
 .max-w-xl {
   max-width: 36rem;
 }
@@ -905,6 +920,9 @@ select {
 .content-center {
   align-content: center;
 }
+.content-between {
+  align-content: space-between;
+}
 .items-end {
   align-items: flex-end;
 }
@@ -942,6 +960,11 @@ select {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .overflow-hidden {
   overflow: hidden;
@@ -1032,6 +1055,14 @@ select {
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1251,6 +1282,14 @@ select {
 .text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1648,6 +1687,11 @@ html tr.no-associated-driver {
   .md\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .md\:text-5xl {
